layout issues fixed

--- a/src/index.css
+++ b/src/index.css
@@ -75,6 +75,7 @@ main {
 .meme--image {
     max-width: 100%;
     border-radius: 3px;
+    max-height: 100%;
 }
 
 .meme--text {
